test/library/standard/Set/init/setInitGenericError.good
setInitGenericError.chpl:8: warning: creating a set with element type R
setInitGenericError.chpl:8: error: set element type cannot currently be generic
