test/library/standard/Set/init/setInitGenericError.chpl
use Set;

record R {
  var x;
  var y = 10;
}

var s = new set(R);
writeln(s);
